# azure-iothub-service-rs

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/configuration/: apply_configuration.rs
examples/directmethod/: ping.rs
examples/query/: select_all_devices.rs
examples/twin/: get_twin.rs
resources/test/configuration/: edgeagent_deserialization.json  edgeagent_serialization.json  edgehub_deserialization.json  modulescontent_serialization.json
src/: directmethod.rs  error.rs  iothub.rs  lib.rs  query.rs  twin.rs
src/configuration/: mod.rs  modulescontent.rs
