[package]
name = "azure-iothub-service"
version = "0.1.0"
authors = ["corollaries"]
edition = "2018"


[dependencies]
base64 = "0.12.1"
bytes = "0.5"
chrono = "0.4"
hmac = "0.8"
crypto-mac = { version = "0.8.0", features = ["std"] }
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0"
sha2 = "0.9.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.0"
